--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "@lifeforge/ui",
     "description": "LifeForge UI component library",
-    "version": "0.25.11",
+    "version": "25.11.5",
     "moduleResolution": "node",
     "sideEffects": false,
     "scripts": {
-        "build": "tsup src/index.ts --format esm,cjs --dts --out-dir dist --minify"
+        "build": "tsup src/index.ts --format esm,cjs --dts --out-dir dist"
     },
     "files": [
         "dist"
@@ -43,7 +43,6 @@
         "javascript-color-gradient": "^2.5.0",
         "lodash": "^4.17.21",
         "pocketbase": "^0.21.5",
-        "react": "^19.0.0",
         "react-currency-input-field": "^3.10.0",
         "react-custom-scrollbars": "^4.2.1",
         "react-date-picker": "^11.0.0",
@@ -58,6 +57,9 @@
         "react-tooltip": "^5.28.0",
         "react-virtualized": "^9.22.6",
         "tailwindcss": "^4.0.12"
+    },
+    "peerDependencies": {
+        "react": "^19.0.0"
     },
     "author": "Lifeforge",
     "license": "MIT",
