--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@lifeforge/ui",
     "description": "LifeForge UI component library",
-    "version": "25.11.15",
+    "version": "0.25.11-16",
     "moduleResolution": "node",
     "sideEffects": false,
     "scripts": {
@@ -27,7 +27,13 @@
         "@types/lodash": "^4.17.16",
         "@types/react": "^19.0.10",
         "@types/react-virtualized": "^9.22.0",
+        "@types/tinycolor2": "^1.4.6",
         "eslint": "^9.22.0",
+        "eslint-config-standard-with-typescript": "^40.0.0",
+        "eslint-import-resolver-alias": "^1.1.2",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-jsx-a11y": "^6.10.2",
+        "eslint-plugin-react": "^7.37.4",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "tsup": "^8.4.0",
         "typescript": "^5.7.3"
@@ -43,6 +49,8 @@
         "clsx": "^2.1.1",
         "color-sorter": "^6.1.2",
         "crypto-js": "^4.2.0",
+        "eslint-plugin-react-compiler": "^19.0.0-beta-bafa41b-20250307",
+        "eslint-plugin-sonarjs": "^3.0.2",
         "file-type-mime": "^0.4.5",
         "javascript-color-gradient": "^2.5.0",
         "lodash": "^4.17.21",
@@ -60,7 +68,9 @@
         "react-toastify": "^10.0.6",
         "react-tooltip": "^5.28.0",
         "react-virtualized": "^9.22.6",
-        "tailwindcss": "^4.0.12"
+        "tailwindcss": "^4.0.12",
+        "tinycolor2": "^1.6.0",
+        "typescript-eslint": "^8.26.1"
     },
     "peerDependencies": {
         "react": "^19.0.0"
