--- a/package.json
+++ b/package.json
@@ -1,83 +1,102 @@
 {
-    "name": "@lifeforge/ui",
-    "description": "LifeForge UI component library",
-    "version": "0.25.11-16",
-    "moduleResolution": "node",
-    "sideEffects": false,
-    "scripts": {
-        "build": "tsc && tsup src/index.ts --format esm,cjs --dts --out-dir dist --minify"
-    },
-    "files": [
-        "dist"
-    ],
-    "baseUrl": "./src",
-    "main": "dist/index.js",
-    "module": "dist/index.mjs",
-    "types": "dist/index.d.ts",
-    "paths": {
-        "@lifeforge/ui/*": [
-            "./src/*"
-        ]
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.22.0",
-        "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-        "@types/crypto-js": "^4.2.2",
-        "@types/javascript-color-gradient": "^2.4.2",
-        "@types/lodash": "^4.17.16",
-        "@types/react": "^19.0.10",
-        "@types/react-virtualized": "^9.22.0",
-        "@types/tinycolor2": "^1.4.6",
-        "eslint": "^9.22.0",
-        "eslint-config-standard-with-typescript": "^40.0.0",
-        "eslint-import-resolver-alias": "^1.1.2",
-        "eslint-plugin-import": "^2.31.0",
-        "eslint-plugin-jsx-a11y": "^6.10.2",
-        "eslint-plugin-react": "^7.37.4",
-        "prettier-plugin-tailwindcss": "^0.6.11",
-        "tsup": "^8.4.0",
-        "typescript": "^5.7.3"
-    },
-    "dependencies": {
-        "@headlessui/react": "^2.2.0",
-        "@iconify/collections": "^1.0.526",
-        "@iconify/react": "^5.2.0",
-        "@tanstack/react-query": "^5.66.11",
-        "@uidotdev/usehooks": "^2.4.1",
-        "@uiw/react-color": "^2.3.4",
-        "@yudiel/react-qr-scanner": "^2.2.1",
-        "clsx": "^2.1.1",
-        "color-sorter": "^6.1.2",
-        "crypto-js": "^4.2.0",
-        "eslint-plugin-react-compiler": "^19.0.0-beta-bafa41b-20250307",
-        "eslint-plugin-sonarjs": "^3.0.2",
-        "file-type-mime": "^0.4.5",
-        "javascript-color-gradient": "^2.5.0",
-        "lodash": "^4.17.21",
-        "pocketbase": "^0.21.5",
-        "react-currency-input-field": "^3.10.0",
-        "react-custom-scrollbars": "^4.2.1",
-        "react-date-picker": "^11.0.0",
-        "react-datetime-picker": "^6.0.1",
-        "react-dropzone": "^14.3.5",
-        "react-i18next": "^15.4.1",
-        "react-medium-image-zoom": "^5.2.13",
-        "react-otp-input": "^3.1.1",
-        "react-photo-album": "^2.4.1",
-        "react-router": "^7.2.0",
-        "react-toastify": "^10.0.6",
-        "react-tooltip": "^5.28.0",
-        "react-virtualized": "^9.22.6",
-        "tailwindcss": "^4.0.12",
-        "tinycolor2": "^1.6.0",
-        "typescript-eslint": "^8.26.1"
-    },
-    "peerDependencies": {
-        "react": "^19.0.0"
-    },
-    "author": "Lifeforge",
-    "license": "MIT",
-    "publishConfig": {
-        "access": "public"
-    }
+  "name": "@lifeforge/ui",
+  "description": "LifeForge UI component library",
+  "version": "0.25.11-16",
+  "moduleResolution": "node",
+  "sideEffects": false,
+  "scripts": {
+    "build": "tsc && tsup src/index.ts",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  },
+  "files": [
+    "dist"
+  ],
+  "baseUrl": "./src",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "paths": {
+    "@lifeforge/ui/*": [
+      "./src/*"
+    ]
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.5",
+    "@eslint/js": "^9.22.0",
+    "@storybook/addon-essentials": "^8.6.4",
+    "@storybook/addon-interactions": "^8.6.4",
+    "@storybook/addon-onboarding": "^8.6.4",
+    "@storybook/blocks": "^8.6.4",
+    "@storybook/react": "^8.6.4",
+    "@storybook/react-vite": "^8.6.4",
+    "@storybook/test": "^8.6.4",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/crypto-js": "^4.2.2",
+    "@types/javascript-color-gradient": "^2.4.2",
+    "@types/lodash": "^4.17.16",
+    "@types/react": "^19.0.10",
+    "@types/react-virtualized": "^9.22.0",
+    "@types/tinycolor2": "^1.4.6",
+    "eslint": "^9.22.0",
+    "eslint-config-standard-with-typescript": "^40.0.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-storybook": "^0.11.4",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "storybook": "^8.6.4",
+    "tsup": "^8.4.0",
+    "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@iconify/collections": "^1.0.526",
+    "@iconify/react": "^5.2.0",
+    "@tailwindcss/vite": "^4.0.13",
+    "@tanstack/react-query": "^5.66.11",
+    "@uidotdev/usehooks": "^2.4.1",
+    "@uiw/react-color": "^2.3.4",
+    "@yudiel/react-qr-scanner": "^2.2.1",
+    "clsx": "^2.1.1",
+    "color-sorter": "^6.1.2",
+    "crypto-js": "^4.2.0",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-bafa41b-20250307",
+    "eslint-plugin-sonarjs": "^3.0.2",
+    "file-type-mime": "^0.4.5",
+    "javascript-color-gradient": "^2.5.0",
+    "lodash": "^4.17.21",
+    "pocketbase": "^0.21.5",
+    "react-currency-input-field": "^3.10.0",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-date-picker": "^11.0.0",
+    "react-datetime-picker": "^6.0.1",
+    "react-dropzone": "^14.3.5",
+    "react-i18next": "^15.4.1",
+    "react-medium-image-zoom": "^5.2.13",
+    "react-otp-input": "^3.1.1",
+    "react-photo-album": "^2.4.1",
+    "react-router": "^7.2.0",
+    "react-toastify": "^10.0.6",
+    "react-tooltip": "^5.28.0",
+    "react-virtualized": "^9.22.6",
+    "tailwindcss": "^4.0.13",
+    "tinycolor2": "^1.6.0",
+    "typescript-eslint": "^8.26.1",
+    "vite-tsconfig-paths": "^5.1.4"
+  },
+  "peerDependencies": {
+    "react": "^19.0.0"
+  },
+  "author": "Lifeforge",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
+  }
 }
