--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@lifeforge/ui",
   "description": "LifeForge UI component library",
-  "version": "0.25.12-24",
+  "version": "0.25.12-27",
   "moduleResolution": "node",
   "sideEffects": false,
   "scripts": {
-    "build": "rm -rf dist && tsc && tsup src/index.ts",
+    "build": "rm -rf dist && tsc --noEmit && tsup src/index.ts",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "baseUrl": "./src",
   "main": "dist/index.js",
@@ -50,7 +51,7 @@
     "@iconify/collections": "^1.0.526",
     "@iconify/react": "^5.2.0",
     "@tailwindcss/vite": "^4.0.13",
-    "@tanstack/react-query": "^5.66.11",
+    "@tanstack/react-query": "^5.69.0",
     "@uidotdev/usehooks": "^2.4.1",
     "@uiw/react-color": "^2.3.4",
     "@yudiel/react-qr-scanner": "^2.2.1",
@@ -85,7 +86,7 @@
     "react": "^19.0.0"
   },
   "author": "Lifeforge",
-  "license": "MIT",
+  "license": "CC-BY-NC-SA-4.0",
   "publishConfig": {
     "access": "public"
   },
