--- a/.prettierrc
+++ b/.prettierrc
@@ -5,8 +5,8 @@
   "arrowParens": "avoid",
   "endOfLine": "auto",
   "plugins": [
-    "prettier-plugin-tailwindcss",
-    "@trivago/prettier-plugin-sort-imports"
+    "@trivago/prettier-plugin-sort-imports",
+    "prettier-plugin-tailwindcss"
   ],
   "importOrder": [
     "^@lifeforge/(.*)$",
@@ -19,5 +19,6 @@
     "^[./]"
   ],
   "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+  "importOrderSortSpecifiers": true,
+  "tailwindStylesheet": "./src/index.css"
 }
