--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "sideEffects": false,
   "scripts": {
     "build": "rm -rf dist && tsc --noEmit && tsup src/index.ts",
+    "lint": "eslint ./src --ext .ts,.tsx",
+    "lint:fix": "eslint ./src --ext .ts,.tsx --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -17,6 +20,13 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
     "@eslint/js": "^9.22.0",
@@ -27,11 +37,13 @@
     "@storybook/react": "^8.6.7",
     "@storybook/react-vite": "^8.6.7",
     "@storybook/test": "^8.6.7",
+    "@tailwindcss/vite": "^4.0.14",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/crypto-js": "^4.2.2",
     "@types/javascript-color-gradient": "^2.4.2",
     "@types/lodash": "^4.17.16",
     "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.0",
     "@types/react-virtualized": "^9.22.2",
     "@types/tinycolor2": "^1.4.6",
     "eslint": "^9.22.0",
@@ -40,17 +52,23 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
+    "eslint-plugin-sonarjs": "^3.0.2",
     "eslint-plugin-storybook": "^0.11.6",
+    "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "storybook": "^8.6.7",
     "tsup": "^8.4.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0",
+    "vite": "^5.2.8",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^1.2.0"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@iconify/collections": "^1.0.529",
     "@iconify/react": "^5.2.0",
-    "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "^5.69.0",
     "@uidotdev/usehooks": "^2.4.1",
     "@uiw/react-color": "^2.4.5",
@@ -58,8 +76,6 @@
     "clsx": "^2.1.1",
     "color-sorter": "^6.2.0",
     "crypto-js": "^4.2.0",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
-    "eslint-plugin-sonarjs": "^3.0.2",
     "file-type-mime": "^0.4.6",
     "javascript-color-gradient": "^2.5.0",
     "lodash": "^4.17.21",
@@ -78,21 +94,29 @@
     "react-tooltip": "^5.28.0",
     "react-virtualized": "^9.22.6",
     "tailwindcss": "^4.0.14",
-    "tinycolor2": "^1.6.0",
-    "typescript-eslint": "^8.27.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "tinycolor2": "^1.6.0"
   },
   "peerDependencies": {
-    "react": "^19.0.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "author": "Lifeforge",
   "license": "CC-BY-NC-SA-4.0",
+  "keywords": [
+    "ui",
+    "components",
+    "react",
+    "tailwindcss",
+    "lifeforge"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Lifeforge-app/lifeforge-ui"
+  },
+  "bugs": {
+    "url": "https://github.com/Lifeforge-app/lifeforge-ui/issues"
+  },
   "publishConfig": {
     "access": "public"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
   }
 }
