--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lifeforge/ui",
   "description": "LifeForge UI component library",
-  "version": "0.25.12-29p",
+  "version": "0.25.12-35",
   "moduleResolution": "node",
   "sideEffects": false,
   "scripts": {
