--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lifeforge/ui",
   "description": "LifeForge UI component library",
-  "version": "0.25.13-2",
+  "version": "0.25.13-3",
   "moduleResolution": "node",
   "sideEffects": false,
   "scripts": {
@@ -9,8 +9,6 @@
     "lint": "eslint ./src --ext .ts,.tsx",
     "lint:fix": "eslint ./src --ext .ts,.tsx --fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
     "bump-and-publish": "bun scripts/bump-version.cjs"
   },
   "files": [
@@ -22,15 +20,7 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
     "@eslint/js": "^9.22.0",
-    "@storybook/addon-essentials": "^8.6.7",
-    "@storybook/addon-interactions": "^8.6.7",
-    "@storybook/addon-onboarding": "^8.6.7",
-    "@storybook/blocks": "^8.6.7",
-    "@storybook/react": "^8.6.7",
-    "@storybook/react-vite": "^8.6.7",
-    "@storybook/test": "^8.6.7",
     "@tailwindcss/vite": "^4.0.14",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/crypto-js": "^4.2.2",
@@ -48,10 +38,8 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-compiler": "^19.0.0-beta-e552027-20250112",
     "eslint-plugin-sonarjs": "^3.0.2",
-    "eslint-plugin-storybook": "^0.11.6",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "storybook": "^8.6.7",
     "tsup": "^8.4.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0",
@@ -71,6 +59,7 @@
     "color-sorter": "^6.2.0",
     "crypto-js": "^4.2.0",
     "file-type-mime": "^0.4.6",
+    "i18next-http-backend": "^3.0.2",
     "javascript-color-gradient": "^2.5.0",
     "lodash": "^4.17.21",
     "pocketbase": "^0.25.2",
