--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "clsx": "^2.1.1",
     "color-sorter": "^6.2.0",
     "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
     "file-type-mime": "^0.4.6",
     "i18next-http-backend": "^3.0.2",
     "javascript-color-gradient": "^2.5.0",
