--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "javascript-color-gradient": "^2.5.0",
     "lodash": "^4.17.21",
     "pocketbase": "^0.25.2",
+    "radix-ui": "^1.3.4",
     "react-currency-input-field": "^3.10.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-date-picker": "^11.0.0",
