--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-dom": "^19.1.3",
     "@types/react-virtualized": "^9.22.2",
     "@types/tinycolor2": "^1.4.6",
+    "babel-plugin-react-compiler": "^19.1.0-rc.1",
     "eslint": "^9.26.0",
     "eslint-config-standard-with-typescript": "^40.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -66,6 +67,7 @@
     "@tanstack/react-query": "^5.75.1",
     "@uidotdev/usehooks": "^2.4.1",
     "@uiw/react-color": "^2.5.3",
+    "@vitejs/plugin-react": "^4.4.1",
     "@yudiel/react-qr-scanner": "^2.3.0",
     "clsx": "^2.1.1",
     "color-sorter": "^6.2.0",
