--- a/package.json
+++ b/package.json
@@ -93,7 +93,8 @@
     "react-tooltip": "^5.28.1",
     "react-virtualized": "^9.22.6",
     "tailwindcss": "^4.1.5",
-    "tinycolor2": "^1.6.0"
+    "tinycolor2": "^1.6.0",
+    "zustand": "^5.0.4"
   },
   "peerDependencies": {
     "react": "^19.0.0",
