--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@headlessui/react": "^2.2.2",
     "@iconify/collections": "^1.0.544",
     "@iconify/react": "^5.2.1",
+    "@million/lint": "^1.0.14",
     "@tanstack/react-query": "^5.75.1",
     "@uidotdev/usehooks": "^2.4.1",
     "@uiw/react-color": "^2.5.3",
