--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-currency-input-field": "^3.10.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-date-picker": "^11.0.0",
+    "react-datepicker": "^8.3.0",
     "react-datetime-picker": "^6.0.1",
     "react-dropzone": "^14.3.8",
     "react-i18next": "^15.5.1",
