--- a/.prettierrc
+++ b/.prettierrc
@@ -9,6 +9,7 @@
     "prettier-plugin-tailwindcss"
   ],
   "importOrder": [
+    "^.*?.module.css$",
     "^@lifeforge/(.*)$",
     "^@core/(.*)$",
     "^@modules/(.*)$",
