--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "moduleResolution": "node",
   "sideEffects": false,
   "scripts": {
-    "build": "rm -rf dist && tsc --noEmit && tsup src/index.ts",
+    "build": "rm -rf dist && tsc --noEmit && tsup src/index.ts && tailwindcss -i ./src/index.css -o ./dist/index.css --minify",
     "lint": "eslint ./src --ext .ts,.tsx",
     "lint:fix": "eslint ./src --ext .ts,.tsx --fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
@@ -31,6 +31,7 @@
     "@storybook/react": "^8.6.12",
     "@storybook/react-vite": "^8.6.12",
     "@storybook/test": "^8.6.12",
+    "@tailwindcss/cli": "^4.1.7",
     "@tailwindcss/vite": "^4.1.5",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/crypto-js": "^4.2.2",
@@ -65,6 +66,7 @@
     "@iconify/collections": "^1.0.544",
     "@iconify/react": "^5.2.1",
     "@million/lint": "^1.0.14",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.75.4",
     "@uidotdev/usehooks": "^2.4.1",
     "@uiw/react-color": "^2.5.3",
@@ -73,6 +75,7 @@
     "clsx": "^2.1.1",
     "color-sorter": "^6.2.0",
     "crypto-js": "^4.2.0",
+    "daisyui": "^5.0.37",
     "dayjs": "^1.11.13",
     "file-type-mime": "^0.4.6",
     "i18next-http-backend": "^3.0.2",
