--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,30 +5,14 @@
     "module": "NodeNext",
     "moduleResolution": "nodenext",
     "baseUrl": ".",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "paths": {
-      "@providers/*": [
-        "./src/providers/*"
-      ],
-      "@hooks/*": [
-        "./src/hooks/*"
-      ],
-      "@utils/*": [
-        "./src/utils/*"
-      ],
-      "@constants/*": [
-        "./src/constants/*"
-      ],
-      "@components/*": [
-        "./src/components/*"
-      ],
-      "@interfaces/*": [
-        "./src/interfaces/*"
-      ]
+      "@providers/*": ["./src/providers/*"],
+      "@hooks/*": ["./src/hooks/*"],
+      "@utils/*": ["./src/utils/*"],
+      "@constants/*": ["./src/constants/*"],
+      "@components/*": ["./src/components/*"],
+      "@interfaces/*": ["./src/interfaces/*"]
     },
     "declaration": true,
     "emitDeclarationOnly": false,
@@ -38,7 +22,5 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": [
-    "./src/**/*"
-  ]
+  "include": ["./src/**/*"]
 }
